Replace deprecated reference